# zuzumap

./: .env.example  CLAUDE.md  Cargo.toml  README.md  package.json
deploy/: deploy.sh  dns-put.json  kafilah.service  map.nahdi.space.conf  nahdi.space-zone-before.json
src/: main.rs
static/: app.css  app.js  index.html  manifest.webmanifest  sw.js
