[package]
name = "kafilah"
version = "0.1.0"
edition = "2021"
description = "Kafilah — a Find My–style location map for friends"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tower-http = { version = "0.5", features = ["fs"] }
dotenvy = "0.15"
base64 = "0.22"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
